<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/color_login_back"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/welcomeMessageLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/welcome_back"
                android:textSize="30sp"
                android:textColor="@color/loginTitleColor"
                android:textStyle="bold"
                android:fontFamily="@font/dm_sans_regular"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_represent_some_of_the_biggest_and_leading_n_brand_names_in_the_market"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/descriptionColor"
                android:textSize="15sp"
                />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcomeMessageLayout"
            android:layout_marginTop="45dp"
            >
            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/email"
                android:layout_marginStart="25dp"
                android:textColor="@color/loginTitleColor"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/dm_sans_regular"
                />
            <EditText
                android:id="@+id/emailET"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLabel"
                android:background="@drawable/custom_edit_text"
                app:layout_constraintStart_toStartOf="@id/emailLabel"
                android:layout_marginTop="10sp"
                android:textSize="17sp"
                android:fontFamily="@font/dm_sans_regular"
                android:hint="designer@bluray.com"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/password"
                android:layout_marginStart="25dp"
                android:textColor="@color/loginTitleColor"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/dm_sans_regular"
                />
            <EditText
                android:id="@+id/passwordET"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLabel"
                android:background="@drawable/custom_edit_text"
                app:layout_constraintStart_toStartOf="@id/passwordLabel"
                android:layout_marginTop="10sp"
                android:textSize="17sp"
                android:fontFamily="@font/dm_sans_regular"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_regular"
            android:text="@string/remember_me"
            android:textColor="#6E6D6D"
            android:textSize="13sp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/rememberMeCheckBox"
            app:layout_constraintBottom_toBottomOf="@id/rememberMeCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:text="@string/forgot_password"
            android:textColor="@color/loginTitleColor"
            android:textStyle="bold"
            android:fontFamily="@font/dm_sans_regular"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            app:layout_constraintTop_toBottomOf="@id/forgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textColor="#EFBA00"
            android:fontFamily="@font/dm_sans_regular"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="35dp"
            app:cornerRadius="10sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You don't have an account yet?"
            android:fontFamily="@font/dm_sans_regular"
            android:textSize="12sp"
            android:textColor="@color/descriptionColor"
            />
            <TextView
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/sign_up"
                android:textColor="@color/gold"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>