<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/color_login_back"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/email_address"
                android:textColor="@color/loginTitleColor"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/dm_sans_regular"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/emailLabel"
                app:layout_constraintTop_toBottomOf="@id/emailLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailLayout"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/password"
                android:layout_marginStart="25dp"
                android:textColor="@color/loginTitleColor"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/dm_sans_regular"
                />
            <EditText
                android:id="@+id/PasswordET"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordLabel"
                android:background="@drawable/custom_edit_text"
                app:layout_constraintStart_toStartOf="@id/passwordLabel"
                android:layout_marginTop="10sp"
                android:textSize="17sp"
                android:fontFamily="@font/dm_sans_regular"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/confirmPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/confirmPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/confirm_password"
                android:layout_marginStart="25dp"
                android:textColor="@color/loginTitleColor"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/dm_sans_regular"
                />
            <EditText
                android:id="@+id/confirmPasswordET"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirmPasswordLabel"
                android:background="@drawable/custom_edit_text"
                app:layout_constraintStart_toStartOf="@id/confirmPasswordLabel"
                android:layout_marginTop="10sp"
                android:textSize="17sp"
                android:fontFamily="@font/dm_sans_regular"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/phoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/phoneNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/phone_number"
                android:layout_marginStart="25dp"
                android:textColor="@color/loginTitleColor"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/dm_sans_regular"
                />

            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/dm_sans_regular"
                android:inputType="phone"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/phoneNumberLabel"
                app:layout_constraintTop_toBottomOf="@id/phoneNumberLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ClientIDLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberLayout"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/clientIDLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/client_id"
                android:layout_marginStart="25dp"
                android:textColor="@color/loginTitleColor"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/dm_sans_regular"
                />
            <EditText
                android:id="@+id/clientIDET"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clientIDLabel"
                android:background="@drawable/custom_edit_text"
                app:layout_constraintStart_toStartOf="@id/clientIDLabel"
                android:layout_marginTop="10sp"
                android:textSize="17sp"
                android:fontFamily="@font/dm_sans_regular"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ClientUuidLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ClientIDLayout"
            android:layout_marginTop="15dp"
            >
            <TextView
                android:id="@+id/ClientUuidLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="barth day"
                android:layout_marginStart="25dp"
                android:textColor="@color/loginTitleColor"
                android:textStyle="bold"
                android:textSize="15sp"
                android:fontFamily="@font/dm_sans_regular"
                />
            <TextView
                android:id="@+id/barthDay"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ClientUuidLabel"
                android:background="@drawable/custom_edit_text"
                app:layout_constraintStart_toStartOf="@id/ClientUuidLabel"
                android:layout_marginTop="10sp"
                android:textSize="17sp"
                android:fontFamily="@font/dm_sans_regular"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"

                />



        </androidx.constraintlayout.widget.ConstraintLayout>

<!--        <CheckBox-->
<!--            android:id="@+id/rememberMeCheckBox"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/dm_sans_regular"-->
<!--            android:text="Remember Me"-->
<!--            android:textColor="#6E6D6D"-->
<!--            android:textSize="13sp"-->
<!--            android:layout_marginStart="30dp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />-->
<!--        <TextView-->
<!--            android:id="@+id/forgotPassword"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintTop_toTopOf="@id/rememberMeCheckBox"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/rememberMeCheckBox"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            android:layout_marginEnd="30dp"-->
<!--            android:text="Forgot Password ?"-->
<!--            android:textColor="@color/loginTitleColor"-->
<!--            android:textStyle="bold"-->
<!--            android:fontFamily="@font/dm_sans_regular"-->
<!--            />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupBtn"
            app:layout_constraintTop_toBottomOf="@id/ClientUuidLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_up_btn"
            android:textColor="#EFBA00"
            android:fontFamily="@font/dm_sans_regular"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="35dp"
            app:cornerRadius="10sp"
            />

        <ProgressBar
            android:id="@+id/pd"
            android:visibility="gone"

            app:layout_constraintTop_toBottomOf="@id/ClientUuidLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_up_btn"
            android:textColor="#EFBA00"
            android:fontFamily="@font/dm_sans_regular"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginTop="35dp"
            app:cornerRadius="10sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signupBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_you_have_account"
                android:fontFamily="@font/dm_sans_regular"
                android:textSize="12sp"
                android:textColor="@color/descriptionColor"
                />
            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/sign_in"
                android:textColor="@color/gold"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>